--- a/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cantante/BuscarPorNombreDeDisco.form
+++ b/Practica4-LuceroJustin-TacuriJhonatan/src/main/java/ec/edu/ups/practica/cantante/compositor/interfaces/vista/cantante/BuscarPorNombreDeDisco.form
@@ -48,6 +48,9 @@
   <SubComponents>
     <Container class="javax.swing.JPanel" name="jpanelA">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="99" red="99" type="rgb"/>
+        </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder title="BUSCAR POR NOMBRE DE DISCO"/>
@@ -111,20 +114,19 @@
           </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="jPanel2">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="99" red="99" type="rgb"/>
+            </Property>
+          </Properties>
 
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
-                  </Group>
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                              <Component id="jblIdBuscarporDisco" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="jblNombreBuscarporDisco" alignment="0" min="-2" pref="58" max="-2" attributes="0"/>
                               <Component id="jblApellidoBuscarporDisco" alignment="0" min="-2" pref="58" max="-2" attributes="0"/>
                               <Component id="jblEdadBuscarporDisco" alignment="0" min="-2" pref="58" max="-2" attributes="0"/>
@@ -135,6 +137,7 @@
                               <Component id="jblNumeroSencillosBuscarporDisco" alignment="0" min="-2" pref="118" max="-2" attributes="0"/>
                               <Component id="jblNumeroConciertosBuscarporDisco" alignment="0" min="-2" pref="133" max="-2" attributes="0"/>
                               <Component id="jblNumeroGirasBuscarporDisco" alignment="0" min="-2" pref="133" max="-2" attributes="0"/>
+                              <Component id="jblIdBuscarporDisco" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="jLabel13" min="-2" pref="118" max="-2" attributes="0"/>
@@ -155,7 +158,12 @@
                           <Component id="txtNombre" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
                           <Component id="txtID" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="181" max="32767" attributes="0"/>
+                      <EmptySpace pref="184" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="btnCancelar" min="-2" pref="128" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
